master
Added is_formal param to vote
