# apps/api/swagger/swagger.json
@@ -1105,6 +1105,12 @@
                         "type": "string",
                         "description": "Comma-separated list of VotingIDs (number)",
                         "name": "voting_id",
+                        "in": "path"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Is formal/informal filtering",
+                        "name": "is_formal",
                         "in": "query"
                     },
                     {
@@ -1444,6 +1450,9 @@
                     "type": "string"
                 },
                 "is_canceled": {
+                    "type": "boolean"
+                },
+                "is_formal": {
                     "type": "boolean"
                 },
                 "is_in_favour": {
