# internal/dao/entities/vote.go
@@ -12,17 +12,19 @@ type Vote struct {
 	Amount     uint64     `json:"amount" db:"amount"`
 	IsInFavor  bool       `json:"is_in_favour" db:"is_in_favour"`
 	IsCanceled bool       `json:"is_canceled" db:"is_canceled"`
+	IsFormal   bool       `json:"is_formal" db:"is_formal"`
 	DeployHash types.Hash `json:"deploy_hash" db:"deploy_hash"`
 	Timestamp  time.Time  `json:"timestamp" db:"timestamp"`
 }
 
-func NewVote(address, deployHash types.Hash, votingID uint32, staked uint64, IsInFavor bool, timestamp time.Time) *Vote {
+func NewVote(address, deployHash types.Hash, votingID uint32, staked uint64, isInFavor bool, isFormal bool, timestamp time.Time) *Vote {
 	return &Vote{
 		Address:    address,
 		VotingID:   votingID,
 		Amount:     staked,
 		DeployHash: deployHash,
-		IsInFavor:  IsInFavor,
+		IsInFavor:  isInFavor,
+		IsFormal:   isFormal,
 		Timestamp:  timestamp,
 	}
 }
